--- a/css.css
+++ b/css.css
@@ -1,57 +1,62 @@
-*{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 0px;
-    padding: 0px;
-    text-decoration: none;
+* {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin: 0px;
+  padding: 0px;
+  text-decoration: none;
+}
+
+body {
+  background-color: rgb(220, 216, 253);
 }
 
 nav {
-    display: flex;
-    background-image: linear-gradient(rgb(52, 0, 100),rgb(96, 96, 228), rgb(175, 243, 158));
-    justify-content: space-between;
-    position: sticky;
-    top: 0;
-    border-bottom:2px solid ;
-  }
-  nav h1 {
-    padding-top: 15px;
-    padding-left: 30px;
-    font-size: 30px;
-  }
-  .nav {
-    display: flex;
-    width: 450px;
-  }
-  .inside {
-    display: flex;
-    align-items: center;
-  }
+  display: flex;
+  background-image: linear-gradient(
+    rgb(43, 21, 65),
+    rgb(96, 96, 228)
+  );
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  border-bottom: 2px solid;
+}
+nav h1 {
+  padding-top: 15px;
+  padding-left: 30px;
+  font-size: 30px;
+}
+.nav {
+  display: flex;
+  width: 450px;
+}
 
-  .home, .btw, .contact{
-    border-radius: 15px;
+.nav h3 {
+  border-radius: 15px;
 }
 h3 {
   padding: 20px;
 }
+.active{
+  background-image: linear-gradient(rgb(54, 54, 107),rgb(160, 33, 199))
+}
+
 h3:hover {
-  background-image:radial-gradient(darkblue,purple);
+  background-image: radial-gradient(rgb(45, 45, 153), rgb(160, 33, 199));
 }
 a {
-  color: rgb(243, 230, 255);
+  color: rgb(237, 225, 250);
 }
-/* .home {
-  background-image: linear-gradient(darkblue, purple);
-} */
+
 
 /* banner */
 .banner {
   display: flex;
   height: 76vh;
-  background-image: url(axtone-1641969751257-7302.jpg);
+  background-image: url(pic/0818_FMOVIES_BACKGROUND.webp);
   background-size: cover;
-  ba
 }
-.wc {
+
+.banner h1 {
   color: aqua;
   padding: 50px;
   margin: auto;
@@ -71,27 +76,141 @@ p {
   margin-top: 10px;
 }
 
-/* card */
 .container {
   display: flex;
-  height: 90vh;
+  justify-content: center;
+  color: black;
 }
 .card {
-  margin: auto;
-  height: 350px;
+  background: white;
   width: 250px;
-  border: 1px solid;
+  height: 450px;
+  margin: 60px 10px;
+  flex-wrap: wrap;
+  border: solid rgb(72, 48, 116) 2px;
+}
+
+.card-image {
+  background-image: url(pic/R.jpg);
+  background-size: cover;
+  height: 150px;
+  margin-bottom: 15px;
+}
+.profil {
+  text-align: center;
+}
+
+.profil img {
+  width: 40%;
+  margin-top: 100px;
+  background-color: purple;
+  border-radius: 50%;
+  border: 3px solid white;
+}
+
+h2 {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+ul{
+  list-style-type: none;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
-  box-shadow: 0 0 10px;
+  margin-left: 25%;
 }
-img {
+
+li{
+  font-size: 20px;
+}
+
+p {
+  margin: auto;
+  margin-bottom: 10px;
+  text-align: justify;
+  max-width: 90%;
+  font-weight: 600;
+}
+
+.lower {
+  margin-top: 55px;
+}
+
+.logo {
+  width: 50px;
+  border-radius: 10px;
+  margin-top: 30px;
+  margin-left: 10px;
+}
+
+.logo:hover{
+  box-shadow: 0px 5px 4px rgb(134, 76, 189);
+  background-color: rgb(220, 208, 253);
+}
+
+/* content home */
+.bgc{
+  padding-top:80px ;
+  color: black;
+}
+.container1{
+  padding: 20px;
+}
+.box{
+  display:flex ;
+  justify-content:space-between ;
+  flex-wrap: wrap;
+}
+.headtittle{
+  margin-bottom:20px ;
+  border-bottom: 5px solid rgb(31, 16, 94);
+}
+.container1 img{
+  height: 300px;
+  width: 200px;
+  margin: 20px;
+  border-radius: 10px;
+  box-shadow: 1 5 10;
+}
+.container1 img:hover{
+  transform: translateY(-5%);
+  transition: 0.7s;
+}
+
+/* email */
+.email{
+  display:flex ;
+  padding-top: 60px;
+  padding-bottom: 100px;
+}
+.pr{
+  height: 450px ;
+  width: 630px;
+  border-radius: 20px
+}
+.sapa{
+  display:flex;
+  width: 100%;
+}
+.input{
+  margin: auto;
+  display: flex;
+  flex-direction:column ;
+}
+button{
+  margin:  auto;
+  width: 200px;
+}
+
+/* footer */
+footer{
+  display:flex ;
+  justify-content:center ;
+  align-items: flex-end;
   height: 100px;
-  width: 100px;
-  margin-bottom: 20px;
+  background-image: linear-gradient(rgb(220, 216, 253),black);
+  color: rgb(114, 132, 235);
 }
-.card h1 {
-  margin-bottom: 50px;
-}
+
+
+
